--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -30,7 +30,7 @@
                 android:src="@drawable/ic_back_arrow"
                 android:scaleX="0.4"
                 android:scaleY="0.4"
-                >
+                tools:ignore="ContentDescription">
             </ImageView>
 
         </androidx.cardview.widget.CardView>
@@ -46,7 +46,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/banana_lickety_split"
                 app:restaurant_banner_image="@{OrderDetailViewModel.order.getRestaurantWithFoods().restaurant.imageUrl}"
-                />
+                tools:ignore="ContentDescription" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -75,7 +75,8 @@
                         android:scaleY="0.5"
                         android:rating="@{OrderDetailViewModel.order.getRestaurantWithFoods().restaurant.rating}"
                         android:progressTint="#FFA500"
-                        android:isIndicator="true"/>
+                        android:isIndicator="true"
+                        tools:ignore="VisualLintBounds" />
 
 
                     <FrameLayout
@@ -92,7 +93,8 @@
                             android:drawablePadding="10dp"
                             android:fontFamily="@font/svn_gilroy_regular"
                             android:gravity="center"
-                            android:text="112km away" />
+                            android:text="@string/_112km_away_str"
+                            tools:ignore="RtlHardcoded,UseCompatTextViewDrawableXml" />
                     </FrameLayout>
 
                 </LinearLayout>
@@ -104,7 +106,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Total:"
+                        android:text="@string/Total_str"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="20sp"
                         android:layout_weight="5"/>
