--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -25,21 +25,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Edit profile"
                 android:fontFamily="@font/svn_gilroy_semi_bold"
-                android:textSize="20dp" />
+                android:text="@string/Edit_profile_str"
+                android:textSize="20sp"
+                tools:ignore="TextSizeCheck,TextSizeCheck,TextSizeCheck" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Save"
+                android:text="@string/Save_str"
                 android:gravity="center"
                 android:fontFamily="@font/svn_gilroy_semi_bold"
                 android:textSize="20sp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:paddingEnd="20dp"
-                android:onClick="@{() -> EditProfileViewModel.onClickButtonSave()}">
+                android:onClick="@{() -> EditProfileViewModel.onClickButtonSave()}"
+                tools:ignore="RelativeOverlap,RtlSymmetry">
 
             </TextView>
 
@@ -62,7 +64,7 @@
                     android:src="@drawable/ic_back_arrow"
                     android:scaleX="0.4"
                     android:scaleY="0.4"
-                    >
+                    tools:ignore="ContentDescription">
                 </ImageView>
 
             </androidx.cardview.widget.CardView>
@@ -92,18 +94,18 @@
                         android:src="@drawable/banana_lickety_split"
                         app:user_photo="@{EditProfileViewModel.imageUrl}">
                     </de.hdodenhof.circleimageview.CircleImageView>
+
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:layout_marginTop="5dp"
-                        android:text="Edit image"
-                        android:textAllCaps="false"
                         android:background="@color/transparent_white"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
-                        android:textSize="14sp"
                         android:onClick="@{() -> EditProfileViewModel.onClickChangeImage()}"
-                        >
-                    </androidx.appcompat.widget.AppCompatButton>
+                        android:text="Edit image"
+                        android:textAllCaps="false"
+                        android:textSize="14sp"
+                        tools:ignore="TouchTargetSizeCheck"></androidx.appcompat.widget.AppCompatButton>
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -121,18 +123,20 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Name"
+                        android:text="@string/Name_str"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="15sp"
                         android:layout_weight="2"/>
+
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:hint="@{EditProfileViewModel.hintName}"
                         android:text="@={EditProfileViewModel.name}"
-                        android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="15sp"
-                        android:layout_weight="1"/>
+                        tools:ignore="Autofill,SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -149,19 +153,21 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Phone number"
+                        android:text="@string/Phone_number_str"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="15sp"
                         android:layout_weight="2"/>
+
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@{EditProfileViewModel.hintPhone}"
-                        android:text="@={EditProfileViewModel.phone}"
-                        android:inputType="number"
+                        android:layout_weight="1"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
+                        android:hint="@{EditProfileViewModel.hintPhone}"
+                        android:inputType="number"
+                        android:text="@={EditProfileViewModel.phone}"
                         android:textSize="15sp"
-                        android:layout_weight="1"/>
+                        tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -180,7 +186,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Change password"
+                        android:text="@string/Change_password_str"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="15sp" />
                 </LinearLayout>
