--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_centerInParent="true"
                 android:text="@{MainViewModel.title}"
                 android:fontFamily="@font/svn_gilroy_semi_bold"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
         </RelativeLayout>
 
         <androidx.viewpager2.widget.ViewPager2
@@ -54,7 +54,8 @@
             app:itemIconTint="@color/custom_bottom_navigation"
             app:itemTextColor="@color/custom_bottom_navigation"
             app:labelVisibilityMode="labeled"
-            app:item_selected="@{viewpager}">
+            app:item_selected="@{viewpager}"
+            tools:ignore="VisualLintBottomNav">
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     </RelativeLayout>
