--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,16 +52,18 @@
                         android:text="@{ProfileViewModel.userName}"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:textSize="25sp"/>
+
                     <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
+                        android:background="@color/transparent_white"
                         android:fontFamily="@font/svn_gilroy_semi_bold"
                         android:gravity="center"
                         android:onClick="@{(view) -> ProfileViewModel.onEditProfile(view)}"
                         android:text="edit profile"
                         android:textAllCaps="false"
-                        android:background="@color/transparent_white"
-                        android:textSize="15sp">
+                        android:textSize="15sp"
+                        tools:ignore="HardcodedText,TouchTargetSizeCheck,TextSizeCheck">
 
                     </androidx.appcompat.widget.AppCompatButton>
                 </LinearLayout>
@@ -91,14 +93,15 @@
                     app:cardElevation="0.1dp"
                     app:cardBackgroundColor="@color/transparent_white"
                     >
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_atm_card"
                         android:scaleType="centerCrop"
                         android:scaleX="0.7"
                         android:scaleY="0.7"
-                        />
+                        app:srcCompat="@drawable/ic_atm_card"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -151,14 +154,15 @@
                     app:cardElevation="0.1dp"
                     app:cardBackgroundColor="@color/transparent_white"
                     >
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_map"
                         android:scaleType="centerCrop"
                         android:scaleX="0.6"
                         android:scaleY="0.6"
-                        />
+                        app:srcCompat="@drawable/ic_map"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -209,14 +213,15 @@
                     app:cardElevation="0.1dp"
                     app:cardBackgroundColor="@color/transparent_white"
                     >
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_atm_card"
                         android:scaleType="centerCrop"
                         android:scaleX="0.6"
                         android:scaleY="0.6"
-                        />
+                        app:srcCompat="@drawable/ic_atm_card"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
@@ -250,11 +255,12 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/ic_log_out"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginRight="30dp"
-            android:onClick="@{()->ProfileViewModel.signOut()}">
+            android:background="@drawable/ic_log_out"
+            android:onClick="@{()->ProfileViewModel.signOut()}"
+            tools:ignore="RtlHardcoded,SpeakableTextPresentCheck">
 
         </androidx.appcompat.widget.AppCompatButton>
 
